tests/baselines/reference/parserForStatement2.errors.txt
==== tests/cases/compiler/parserForStatement2.ts (1 errors) ====
    var a;
    var b = [];
    var c;
    for (a in b[c] = b[c] || [], d) {
                                 ~
!!! parserForStatement2.ts(4,30): error TS2095: Cannot find name 'd'.
    
    }